--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
             <div class="text">
                 <h1>Congratulations!</h1>
                 <h2>You just created a Node.js web application</h2>
+                <h2>And you've customized it!</h2>
             </div>
         </div>
     </div>
